[MOSIP-8293] updated autht type status service